--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <span class="moves">3</span> Moves
 
             <div class="restart">
+                <!--                TODO: change for a button "start new game"-->
                 <i id="shuffle-btn" class="fa fa-repeat"></i>
             </div>
         </section>
