Change styling (demo)

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
     <div class="container">
         <header>
-            <h1>Matching Game</h1>
+            <h1>Flag Memory Game</h1>
+            <h2>Poland and its Neighbours</h2>
         </header>
 
         <section class="score-panel">
@@ -36,6 +37,11 @@
             <!--        Grid of shuffled cards-->
 
         </ul>
+
+        <footer>
+            <p>Created by AgataC | 2018 </p>
+            <p><span class="light">Image designed by <a href="https://www.freepik.com/free-vector/flat-map-compass-background_1581318.htm">Freepik</a></span></p>
+        </footer>
     </div>
 
     <!--    <script src="js/scripts.js"></script>-->
