--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li><i class="fa fa-star"></i></li>
             </ul>
 
-            <span class="moves">3</span> Moves
+            <span id="moves-counter" class="moves">3</span> Moves
 
             <div class="restart">
                 <!--                TODO: change for a button "start new game"-->
