--- a/index.html
+++ b/index.html
@@ -5,64 +5,62 @@
     <meta charset="utf-8">
     <title>Matching Game</title>
     <meta name="description" content="">
-    <!--    <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">-->
-    <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
-
-    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans:300|Coda|Kaushan+Script" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://use.fontawesome.com/f0cb29eb07.js"></script>
-    <!--    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>-->
 </head>
 
 <body>
 
+    <!-- HEADER -->
     <div class="container">
         <header>
             <h1>Flag Memory Game</h1>
             <h2>Poland and its Neighbours</h2>
         </header>
 
+        <!--       SCORE PANEL -->
         <section class="score-panel">
             <ul class="stars">
-                <!--
-                <li><i class="fas fa-star"></i></li>
-                <li><i class="fas fa-star"></i></li>
-                <li><i class="fas fa-star"></i></li>
--->
                 <li id="star-one"><i class="fa fa-star" aria-hidden="true"></i></li>
                 <li id="star-two"><i class="fa fa-star" aria-hidden="true"></i></li>
                 <li id="star-three"><i class="fa fa-star" aria-hidden="true"></i></li>
-
             </ul>
             <div class="panel-container">
                 <span id="moves-counter" class="moves">0 moves</span>
-                <!--                    <i id="shuffle-btn" class="fa fa-repeat"></i>-->
                 <button id="shuffle-btn" class="reload-button">New game</button>
                 <div class="timer"><label id="minutes">00</label>:<label id="seconds">00</label></div>
             </div>
         </section>
 
+        <!-- BOARD FOR CARDS -->
         <ul id="board" class="deck">
-            <!--        Grid of shuffled cards-->
-
         </ul>
+
+        <!--        SPEECH BUBBLE WITH INFO ABOUT FLAG -->
+        <div id="info-bubble" class="flag-info">
+            <div class="bubble">
+                <p id="flag-name">You've matched flag of ...!</p>
+            </div>
+        </div>
+
+        <!--        CONGRATULATIONS POPUP -->
         <div id="popup-window" class="modal">
             <div class="modal-content">
-                <!--                <h3>Congratulations, you won!<i class="far fa-thumbs-up"></i></h3>-->
-
                 <h3>Congratulations, you won!<i class="fa fa-thumbs-o-up" aria-hidden="true"></i></h3>
                 <p>Do you want to play again?</p>
                 <button id="modal-btn" class="reload-button">Play again</button>
             </div>
         </div>
 
+        <!-- FOOTER -->
         <footer>
             <p>Created by AgataC | 2018 </p>
             <p><span class="light">Image designed by <a href="https://www.freepik.com/free-vector/flat-map-compass-background_1581318.htm">Freepik</a></span></p>
         </footer>
     </div>
 
-    <!--    <script src="js/scripts.js"></script>-->
     <script src="js/app.js"></script>
 
 </body>
