--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="panel-container">
                 <span id="moves-counter" class="moves">0 moves</span>
                 <button id="shuffle-btn" class="reload-button">New game</button>
-                <div class="timer"><label id="minutes">00</label>:<label id="seconds">00</label></div>
+                <div class="timer"><label id="timer" class="time">00:00</label></div>
             </div>
         </section>
 
@@ -41,7 +41,7 @@
         <!--        SPEECH BUBBLE WITH INFO ABOUT FLAG -->
         <div id="info-bubble" class="flag-info">
             <div class="bubble">
-                <p id="flag-name">You've matched flag of ...!</p>
+                <p id="flag-name"></p>
             </div>
         </div>
 
@@ -49,7 +49,8 @@
         <div id="popup-window" class="modal">
             <div class="modal-content">
                 <h3>Congratulations, you won!<i class="fa fa-thumbs-o-up" aria-hidden="true"></i></h3>
-                <p>Do you want to play again?</p>
+                <p>Your rating is:<span id="rating-info"></span></p>
+                <p>Your time is:<span class="time"></span></p>
                 <button id="modal-btn" class="reload-button">Play again</button>
             </div>
         </div>
