Add styling changes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Matching Game</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans:300|Coda|Kaushan+Script" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alegreya+Sans:300|Coda|Kaushan+Script">
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://use.fontawesome.com/f0cb29eb07.js"></script>
 </head>
@@ -20,7 +20,7 @@
             <h2>Poland and its Neighbours</h2>
         </header>
 
-        <!--       SCORE PANEL -->
+        <!-- SCORE PANEL -->
         <section class="score-panel">
             <ul class="stars">
                 <li id="star-one"><i class="fa fa-star" aria-hidden="true"></i></li>
@@ -38,14 +38,14 @@
         <ul id="board" class="deck">
         </ul>
 
-        <!--        SPEECH BUBBLE WITH INFO ABOUT FLAG -->
+        <!-- SPEECH BUBBLE WITH INFO ABOUT FLAG -->
         <div id="info-bubble" class="flag-info">
             <div class="bubble">
                 <p id="flag-name"></p>
             </div>
         </div>
 
-        <!--        CONGRATULATIONS POPUP -->
+        <!-- CONGRATULATIONS POPUP -->
         <div id="popup-window" class="modal">
             <div class="modal-content">
                 <h3>Congratulations, you won!<i class="fa fa-thumbs-o-up" aria-hidden="true"></i></h3>
