--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </ul>
             <div class="panel-container">
                 <span id="moves-counter" class="moves">0 moves</span>
-                <button id="shuffle-btn" class="reload-button">New game</button>
+                <button id="reload-btn" class="reload-button">New game</button>
                 <div class="timer"><label id="timer" class="time">00:00</label></div>
             </div>
         </section>
