--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         </section>
 
         <!-- BOARD FOR CARDS -->
+        <!-- Flag icons made by Freepik from Flaticon -->
         <ul id="board" class="deck">
         </ul>
 
@@ -58,7 +59,7 @@
         <!-- FOOTER -->
         <footer>
             <p>Created by AgataC | 2018 </p>
-            <p><span class="light">Image designed by <a href="https://www.freepik.com/free-vector/flat-map-compass-background_1581318.htm">Freepik</a></span></p>
+            <p>Image by <a href="https://www.freepik.com/free-vector/flat-map-compass-background_1581318.htm"><span class="light">Freepik</a></span> | Flag icons by Freepik from <span><a href="www.flaticon.com">Flaticon</a></span></p>
         </footer>
     </div>
 
