Add minor code styling changes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Matching Game</title>
+    <title>Flag Memory Game</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alegreya+Sans:300|Coda|Kaushan+Script">
@@ -50,8 +50,8 @@
         <div id="popup-window" class="modal">
             <div class="modal-content">
                 <h3>Congratulations, you won!<i class="fa fa-thumbs-o-up" aria-hidden="true"></i></h3>
-                <p>Your rating is:<span id="rating-info"></span></p>
-                <p>Your time is:<span class="time"></span></p>
+                <p>Your rating was:<span id="rating-info"></span></p>
+                <p>Your game took:<span class="time"></span></p>
                 <button id="modal-btn" class="reload-button">Play again</button>
             </div>
         </div>
